# mwf

./: .env.dist  .env.test.dist  Cargo.toml  Dockerfile  README.md  docker-compose.yml  update.sh
app/: Cargo.toml
app/config/: settings.toml
app/src/: app.rs  cache.rs  db.rs  factory.rs  lib.rs  main.rs  routes.rs  session.rs  settings.rs
app/src/routes/: api.rs  middleware.rs
migrations/: 20260607100719_create_test_table.down.sql  20260607100719_create_test_table.up.sql
