[workspace]
members = [
    "app",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "macros"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
config = { version = "0.14", features = ["toml"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
rmp-serde = "1.3.1"
rand = "0.8"
hex = "0.4"

# Dev dependencies
tokio-test = { version = "1", package = "tokio", features = ["test-util"] }

[workspace.lints.clippy]
all = "allow"
pedantic = "warn"

# Allow
